fix card on mobile

--- a/src/scss/layout/_ads.scss
+++ b/src/scss/layout/_ads.scss
@@ -22,9 +22,11 @@
 
     picture {
         img {
-            height: 25rem;
+            height: 28rem;
             object-fit: cover;
         }
+
+        margin-bottom: 1rem;
     }
 
     .card__details {
@@ -41,16 +43,27 @@
     }
 
     .card__title {
-        height: 8rem;
+        @include m.desktop {
+            height: 7.5rem;
+        }
+
+        text-wrap: balance;
+
         text-transform: capitalize;
-        font-size: 2.5rem;
+        font-size: 2.2rem;
+        margin: 0;
         -webkit-line-clamp: 2;
         /* Número de líneas visibles antes del truncamiento */
         line-clamp: 2;
     }
 
     .card__description {
-        height: 15rem;
+        @include m.desktop {
+            height: 15rem;
+        }
+
+        margin-top: 1rem;
+
         -webkit-line-clamp: 4;
         /* Número de líneas visibles antes del truncamiento */
         line-clamp: 4;
@@ -59,6 +72,7 @@
     .card__price {
         color: v.$green;
         text-decoration: underline;
+        font-size: 2.5rem;
 
         .dollar {
             font-weight: bolder;
